# energybuildai-qt-dashboard

./: CMakeLists.txt  README.md
docs/: ALARM_ACKNOWLEDGEMENT_WORKFLOW.md  DEEP_ARCHITECTURE.md  DESIGN_ARCHITECTURE.md  DIGI_CONNECTCORE_DEPLOYMENT.md  README.md  VALIDATION_MATRIX.md
packaging/: energybuildai-dashboard.service
qml/: Main.qml
qml/components/: AlarmTicket.qml  KpiCard.qml  StatusBadge.qml
src/: main.cpp
src/app/: AppFacade.cpp  AppFacade.h
src/async/: FutureBridge.h  PromiseUtils.h
src/domain/: Alarm.h  IAlarmRepository.h  InMemoryAlarmRepository.cpp  InMemoryAlarmRepository.h
src/domain/usecases/: AcknowledgeAlarmUseCase.h  FetchAlarmsUseCase.h
src/qml/: AlarmListModel.cpp  AlarmListModel.h
yocto/: energybuildai-dashboard_git.bb
